--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,14 +5,7 @@
 .title-font {
   font-family: 'Playfair Display', serif;
 }
-.padding-navbar {
-  padding-left: 250px;
-  padding-right: 250px;
-}
-.margin-navbar {
-  margin-left: 250px;
-  margin-right: 250px;
-}
+
 .absolute-center {
   position: absolute;
   top: 50%;
@@ -22,10 +15,174 @@
 .bright-50 {
   filter: brightness(50%);
 }
-a{
+a {
   text-decoration: none;
 }
-.main-page{
-  padding-left: 250px;
-  padding-right: 250px;
+
+.photo-profile {
+  height: 25px;
+  width: 25px;
+  border-radius: 100%;
+  background-color: darkblue;
+}
+.photo-profile-big {
+  height: 150px;
+  width: 150px;
+  border-radius: 100%;
+  background-color: darkblue;
+}
+.padding-navbar {
+  padding-left: 25px;
+  padding-right: 25px;
+}
+.margin-navbar {
+  margin-left: 25px;
+  margin-right: 25px;
+}
+.close {
+  padding: 0;
+  background-color: transparent;
+  border: 0;
+  float: right;
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 1;
+  color: #000;
+  text-shadow: 0 1px 0 #fff;
+  opacity: 0.5;
+}
+.border-bottom-blue {
+  border-bottom: 5px solid #00b7b5;
+}
+@media (min-width: 576px) {
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  .padding-navbar {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  .margin-navbar {
+    margin-left: 150px;
+    margin-right: 150px;
+  }
+  .main-page {
+    padding-left: 75px;
+    padding-right: 75px;
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  .padding-navbar {
+    padding-left: 175px;
+    padding-right: 175px;
+  }
+  .margin-navbar {
+    margin-left: 175px;
+    margin-right: 175px;
+  }
+  .main-page {
+    padding-left: 175px;
+    padding-right: 175px;
+  }
+}
+
+// X-Large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+  .padding-navbar {
+    padding-left: 175px;
+    padding-right: 175px;
+  }
+  .margin-navbar {
+    margin-left: 175px;
+    margin-right: 175px;
+  }
+}
+
+// XX-Large devices (larger desktops, 1400px and up)
+@media (min-width: 1400px) {
+}
+$primary:       #00B7B5;
+@import '~bootstrap/scss/bootstrap.scss';
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+
+
+.container-check {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.container-check input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 5px;
+}
+
+/* On mouse-over, add a grey background color */
+.container-check:hover input ~ .checkmark {
+  background-color: #ccc;
+  border-radius: 5px;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container-check input:checked ~ .checkmark {
+  background-color: #00B7B5;
+  border-radius: 5px;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.container-check input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.container-check .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 8px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
