--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -186,3 +186,8 @@ input[type='number'] {
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
+
+// style to give the height value to the image
+.i-height {
+  height: 200px;
+}
